# socket_demo

./: .gitignore  README.md  client.py  default.nix  pyproject.toml  server.py
.github/workflows/: python-package.yml
lib/: parser.py
lib/tests/: test_parser.py
mathserver/: client.py  server.py
mathserver/lib/: expression.py
