[tool.poetry]
name = "mathserver"
version = "0.1.0"
description = "using socket with Python"
authors = ["MV <m.viey@wanadoo.fr>"]
license = "all rights reserved"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
server = "mathserver.server:main"
client = "mathserver.client:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
mypy = "^1.10.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
